--- a/style.css
+++ b/style.css
@@ -1,37 +1,126 @@
-html {
-  height: 100%;
-  width: 100%;
-  font-family: "Titillium Web", sans-serif;
+@import url('https://fonts.googleapis.com/css?family=Architects+Daughter|Fredoka+One&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+li {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
 }
 
 body {
-  min-height: 100%;
-  min-width: 100%;
-  background: linear-gradient(pink, violet);
+  font-family: 'Architects Daughter', cursive;
 }
 
-button {
-  font-size: 7px;
+/* heading  */
+
+h1.heading {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 10vh;
 }
 
-#main-content {
-  position: relative;
+form#task-form {
   display: flex;
   justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  border: 1px solid #333;
-  background: rgba(255, 255, 255, 0.3);
-  padding: 15px 20px 18px 18px;
-  border-radius: 5px;
-  box-shadow: 2px 5px 5px #333;
+  margin-top: 25px;
 }
 
-#list {
-  margin: 10px;
-  border: 1px solid #333;
-  background: rgba(255, 255, 255, 0.75);
-  padding: 15px 20px 18px 18px;
-  border-radius: 5px;
-  box-shadow: 2px 5px 5px #333;
+div.input-wrapper {
+  border-bottom: 1px solid #a1a1a1;
+  height: 40px;
+  width: 300px;
+  /* border-radius: 5px; */
+}
+
+#new-task-description {
+  float: left;
+  height: 100%;
+  border: 0;
+  width: 85%;
+  outline: none;
+  padding-left: 10px;
+  font-size: 1.2rem;
+  font-family: 'Architects Daughter', cursive;
+  /* border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px; */
+}
+
+div.input-wrapper button {
+  height: 100%;
+  border: 0;
+  width: 15%;
+  outline: none;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  font-size: 1.2rem;
+  cursor: pointer;
+  color: #a1a1a1;
+}
+
+span.pencil {
+  display: inline-block;
+  transform: rotate(-270deg);
+}
+
+div.tooltip1 {
+  position: absolute;
+  top: 70px;
+  left: 700px;
+  display: none;
+  border: 1px solid #3b3b3b;
+  background-color: #3b3b3b;
+  border-bottom-right-radius: 10px;
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
+  padding: 5px 10px;
+  color: #fff;
+}
+
+/* List  */
+
+div#list {
+  margin-top: 30px;
+}
+
+div#list h2 {
+  text-align: center;
+  text-decoration: underline;
+}
+
+div#list h5 {
+  text-align: center;
+  margin-top: 10px;
+}
+
+ul#tasks {
+  width: 450px;
+  margin: 30px auto 0 auto;
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* align-items: center; */
+}
+
+ul#tasks li {
+  text-align: center;
+  font-size: 1.3rem;
+}
+
+/* li styling for javascript use  */
+li.layout {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 100px;
+}
+
+/* li div content styling for js use  */
+.todo-content {
+  text-decoration: line-through;
 }
